Add method to get YouTube headers.